Bug Fixes:
-Fixed bug where if you didn't have enough gbp to cover a roulette bet it defaulted to saying "Derek didn't have enough gbp"

New Features/Updates:
-Progressive gbp farming changes
--50 per msg > -10000
--20 per msg > -2500
--10 per msg > -1000
--reverted it back to 3 per msg > 250
-Added Banking
--You can now deposit and withdraw gbp into a private account that only you can see
--The account maxes out at 20000 gbp
--Welfare and Progressive gbp check your private account to give out accurate gbp
-!transfer now says who initiated the