@@ -25,12 +25,12 @@
     "28": 29,
     "29": 62,
     "31": 0,
-    "32": 0,
-    "33": 0,
+    "32": 175,
+    "33": 97.5,
     "36": 0,
     "37": 0,
     "39": [
-      0,
+      65,
       0,
       0
     ],
