@@ -1,1 +1,1 @@
-{"450001712305143869":{"name":"Colin","gbp":4840,"achievements":[34,3],"simmerdown":0,"account":15000},"497803559144914944":{"name":"Andrew","gbp":576.25,"achievements":[7],"simmerdown":0,"account":0},"499328039621230592":{"name":"Wyatt","gbp":19980.25,"achievements":[24,2,1,12,30,8,3,9,23,10,6,16,14,11,5],"simmerdown":0,"account":0},"463080062175019010":{"name":"Ian","gbp":19570,"achievements":[21,3,9,2,1,16,14,6,5,12,30,11,19,8],"simmerdown":0,"account":0},"210861925771247636":{"name":"Zaid","gbp":17195,"achievements":[11,12,30,14,7,3,5,15,8,9,22,2,29,16,6,23,1,13,20,21,19,35],"simmerdown":0,"account":0},"501929393401364481":{"name":"Mike","gbp":250,"achievements":[],"simmerdown":0,"account":0},"509430603339399186":{"name":"Brian","gbp":1032.5,"achievements":[],"simmerdown":0,"account":0},"526190184455471105":{"name":"Carl","gbp":13000,"achievements":[24,15,5,8,9,2,3,11,23,1,6,10],"simmerdown":0,"account":0},"462798271195119626":{"name":"Alex","gbp":1549.5,"achievements":[11,17],"simmerdown":0,"account":0},"562203622474252288":{"name":"Dylan","gbp":761.5,"achievements":[],"simmerdown":0,"account":0},"501887537451630593":{"name":"Ramzi","gbp":840,"achievements":[11],"simmerdown":0,"account":0},"434471986748456962":{"name":"Chrisvan","gbp":408,"achievements":[16,11],"simmerdown":0,"account":0},"497861779020578837":{"name":"Hayden","gbp":19711.26,"achievements":[8,9,2,5,1,23,3,16,10,6,12,14,11,22,13,20,21,15,19],"simmerdown":0,"account":0},"501930484838957069":{"name":"Tom","gbp":525,"achievements":[],"simmerdown":0,"account":0},"581903756111773716":{"name":"Justin","gbp":505,"achievements":[],"simmerdown":0,"account":0},"508076579684089896":{"name":"Jacob","gbp":24830.5,"achievements":[11,7,15,1,16,6,2],"simmerdown":0,"account":0},"525147400176664626":{"name":"Teddy","gbp":992.5,"achievements":[24],"simmerdown":0,"account":0},"640368746690510868":{"name":"Slim","gbp":606,"achievements":[24],"simmerdown":0,"account":0},"498262864541515786":{"name":"Derek","gbp":704,"achievements":[],"simmerdown":0,"account":0}}
+{"450001712305143869":{"name":"Colin","gbp":355,"achievements":[34,3],"simmerdown":0,"account":15000},"497803559144914944":{"name":"Andrew","gbp":576.25,"achievements":[7],"simmerdown":0,"account":0},"499328039621230592":{"name":"Wyatt","gbp":19980.25,"achievements":[24,2,1,12,30,8,3,9,23,10,6,16,14,11,5],"simmerdown":0,"account":0},"463080062175019010":{"name":"Ian","gbp":19570,"achievements":[21,3,9,2,1,16,14,6,5,12,30,11,19,8],"simmerdown":0,"account":0},"210861925771247636":{"name":"Zaid","gbp":17195,"achievements":[11,12,30,14,7,3,5,15,8,9,22,2,29,16,6,23,1,13,20,21,19,35],"simmerdown":0,"account":0},"501929393401364481":{"name":"Mike","gbp":250,"achievements":[],"simmerdown":0,"account":0},"509430603339399186":{"name":"Brian","gbp":1032.5,"achievements":[],"simmerdown":0,"account":0},"526190184455471105":{"name":"Carl","gbp":13000,"achievements":[24,15,5,8,9,2,3,11,23,1,6,10],"simmerdown":0,"account":0},"462798271195119626":{"name":"Alex","gbp":1549.5,"achievements":[11,17],"simmerdown":0,"account":0},"562203622474252288":{"name":"Dylan","gbp":761.5,"achievements":[],"simmerdown":0,"account":0},"501887537451630593":{"name":"Ramzi","gbp":840,"achievements":[11],"simmerdown":0,"account":0},"434471986748456962":{"name":"Chrisvan","gbp":408,"achievements":[16,11],"simmerdown":0,"account":0},"497861779020578837":{"name":"Hayden","gbp":19711.26,"achievements":[8,9,2,5,1,23,3,16,10,6,12,14,11,22,13,20,21,15,19],"simmerdown":0,"account":0},"501930484838957069":{"name":"Tom","gbp":525,"achievements":[],"simmerdown":0,"account":0},"581903756111773716":{"name":"Justin","gbp":505,"achievements":[],"simmerdown":0,"account":0},"508076579684089896":{"name":"Jacob","gbp":24830.5,"achievements":[11,7,15,1,16,6,2],"simmerdown":0,"account":0},"525147400176664626":{"name":"Teddy","gbp":992.5,"achievements":[24],"simmerdown":0,"account":0},"640368746690510868":{"name":"Slim","gbp":606,"achievements":[24],"simmerdown":0,"account":0},"498262864541515786":{"name":"Derek","gbp":704,"achievements":[],"simmerdown":0,"account":0}}
