@@ -2,13 +2,13 @@
   "450001712305143869": {
     "name": "Colin",
     "lottery_tickets": 0,
-    "bj_wins": 0,
-    "bj_pushes": 0,
-    "bj_losses": 0,
+    "bj_wins": 3,
+    "bj_pushes": 2,
+    "bj_losses": 7,
     "gg_wins": 0,
     "gg_losses": 0,
-    "total_msgs": 128,
-    "total_commands": 94,
+    "total_msgs": 185,
+    "total_commands": 151,
     "achievements": 0,
     "farm_messages": 0,
     "non_farm_messages": 34
