@@ -1,3 +1,3 @@
-!lottery buy [Number of Tickets]: Purchases the nubmer of specified tickets. If no number is specified, it defaults to 1
+!powerball buy [Number of Tickets]: Purchases the nubmer of specified tickets. If no number is specified, it defaults to 1
 
-!lottery stats: Shows the number of tickets that have been bought and the amount of gbp in the lottery
+!powerball stats: Shows the number of tickets that have been bought and the amount of gbp in the lottery
