@@ -1,5 +1,6 @@
 Bug Fixes:
 -Fixed bug where if you didn't have enough gbp to cover a roulette bet it defaulted to saying "Derek didn't have enough gbp"
+-Changed it so !powerball help says "powerball" instead of "lottery"
 
 New Features/Updates:
 -Progressive gbp farming changes
